<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".final_display">

    <Button
        android:id="@+id/Restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        app:backgroundTint="#666FA1"
        android:textColorLink="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#9F9B9B"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="142dp"
        android:text="@string/final_score"
        android:gravity="center"
        android:textColor="#9F9B9B"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/Restart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/final_score"
        android:layout_width="197dp"
        android:layout_height="63dp"
        android:layout_marginStart="121dp"
        android:layout_marginLeft="121dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="232dp"
        android:layout_marginRight="232dp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:text="@string/final_score1"
        android:textColor="#9F9B9B"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/Restart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>